[package]
name = "rakn"
version = "0.1.0"
authors = ["fishi0x01"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
regex = "1"
lazy_static = "1.4.0"
clap = {version = "~2.27.0", features = ["yaml"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-info = "0.5.9"
