[package]
name = "rakn"
version = "0.1.0"
authors = ["fishi0x01"]
edition = "2018"

[[bin]]
name = "rakn"
path = "src/main.rs"

[dependencies]
walkdir = "2"
regex = "1"
lazy_static = "1.4.0"
clap = "~2.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-info = "0.5.9"
derive_builder = "0.9.0"
docker_extract = "0.2.0"
tempdir = "0.3.7"
libdb = { git = "https://github.com/fishi0x01/libdb-rs", branch = "fishi0x01/add-cursor" }
